<resources>
    <string name="app_name">ELEARNING</string>
    <string name="passWord">Mật khẩu</string>
    <string name="passWordConfirm">Xác Nhận Mật khẩu</string>
    <string name="signIn">Đăng nhập</string>
    <string name="forgotPassword">Quên mật khẩu</string>
    <string name="savePass">Nhớ mật khẩu</string>
    <string name="signUp">Đăng kí</string>
    <string name="loginFB">Facebook</string>
    <string name="loginGG">Google</string>
    <string name="email">Email</string>
    <string name="lastName">Họ</string>
    <string name="firstName">Tên</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="save">Lưu</string>
    <string name="cancle">Hủy</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_fail">Sai thông tin đăng nhập</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Trang chủ</string>
    <string name="nav_history_exam">Kết quả kiểm tra</string>
    <string name="nav_exam">Kiểm tra</string>
    <string name="nav_history">Lịch sử học tập</string>
    <string name="nav_notifications">Thông báo</string>
    <string name="nav_settings">Tài khoản</string>
    <string name="nav_about_us">Thông tin</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="nav_support">Hỗ trợ</string>
    <string name="nav_hotline">Holine : 1900 1000</string>
    <string name="menu_listlesson">Danh sách bài giảng</string>
    <string name="menu_lesson">Nội dung</string>
    <string name="menu_all_course">Toàn bộ khóa học</string>
    <string name="menu_qr_scan">Quét mã khóa học</string>
    <string name="nav_email">Email : elearning@gmail.com</string>
    <string name="home_course_new">Mới nhất</string>
    <string name="home_course_most">Phổ biến nhất</string>
    <string name="home_course_top_view">Đánh giá cao</string>
    <string name="home_more">Xem thêm</string>
    <string name="title_cancel">Hủy</string>
    <string name="title_yes">Lưu</string>
    <string name="title_change_avatar">Đổi ảnh đại diện</string>
    <string name="cap_log_out">Đăng xuất</string>
    <string name="cap_yes">Có</string>
    <string name="cap_no">Không</string>
    <string name="cap_logout_ask">Bạn có chắc chắn thoát không ?</string>
    <string name="cap_search_result">Kết quả tìm kiếm</string>
    <string name="title_search">Tìm kiếm khóa học</string>
    <string name="cap_do_exam">Làm bài</string>
    <string name="cap_view">Xem</string>
    <string name="cap_question_prev">Câu trước</string>
    <string name="cap_question_next">Câu sau</string>
    <string name="cap_start">Bắt đầu</string>
    <string name="cap_info_exam">Thông tin bài kiểm tra</string>
    <string name="cap_info_last_exam">Kết quả trước đó</string>
    <string name="cap_continute">Tiếp tục</string>
    <string name="cap_ask_done_exam">Bạn có chắc chắn nộp bài ?</string>
    <string name="cap_done_exam">Hoàn Thành</string>
    <string name="cap_loading">Đang tải...</string>
    <string name="cap_history_studing">Khóa Học Đang Học</string>
    <string name="cap_history_done">Khóa Học Đã Hoàn Thành</string>
    <string name="cap_notification_end">Ngày hết hạn : %s</string>
    <string name="cap_notification_start">Ngày bắt đầu : %s</string>
    <string name="cap_exam_pass">Bài kiểm tra đã hoàn thành</string>
    <string name="cap_exam_fail">Bài kiểm tra chưa hoàn thành</string>
    <string name="cap_no_data">Không có dữ liệu</string>
    <string name="cap_upload_avatar_succes">Đổi ảnh đại diện thành công</string>
    <string name="cap_upload_avatar_fail">Đổi ảnh đại diện không thành công</string>
    <string name="cap_tree_dot">...</string>
    <string name="cap_apply">Áp dụng</string>
    <string name="cap_price">Giá</string>
    <string name="cap_rate">Đánh Giá</string>
    <string name="cap_all">Tất cả</string>
    <string name="cap_sort_default">Mặc Định</string>
    <string name="cap_sort_name">Theo Tên</string>
    <string name="cap_sort_price">Theo Giá</string>
    <string name="cap_sort_number_credits">Theo Tín Chỉ</string>
    <string name="cap_category">Danh mục</string>
    <string name="cap_select_category">Chọn danh mục muốn tìm :</string>
    <string name="cap_not_found">Không tìm thấy</string>
    <string name="cap_not_support">Không hỗ trợ ở chế độ tất cả</string>
    <string name="cap_error_data">Không nhận được dữ liệu</string>

    <!--validate_input-->
    <string name="validate_email">Vui lòng nhập email</string>
    <string name="validate_firstName">Vui lòng nhập tên</string>
    <string name="validate_lastName">Vui lòng nhập họ</string>
    <string name="validate_pass">Vui lòng nhập mật khẩu</string>
    <string name="validate_pass_confirm">Vui lòng xác nhận mật khẩu</string>
    <string name="validate_confirmpass_error">Mật khẩu không khớp</string>
    <string name="cap_signup_success">Đăng kí thành công</string>
    <string name="cap_signup_fail">Đăng kí không thành công</string>
    <!--item course-->
    <string name="course_creadits">Số tín chỉ: %s</string>
    <string name="course_donor">Nhà xuất bản: %s</string>
    <string name="course_date_start">Bắt đầu: %s</string>
    <string name="course_date_end">Kết thúc: %s</string>
    <!--item lesson-->
    <string name="lesson_name">Tên bài giảng: %s</string>
    <string name="lesson_source_type">Loại bài giảng: %s</string>
    <string name="lesson_time">Thời gian: %s phút</string>
    <string name="lesson_description">Mô tả : %s</string>
    <!--item exam information-->
    <string name="exam_name">Tên bài kiểm tra: %s</string>
    <string name="exam_time">Thời gian:  %s phút </string>
    <string name="exam_number_question">Số câu hỏi : %s</string>
    <string formatted="false" name="exam_request_question">Yêu cầu : %s/%s</string>
    <!--item exam history-->
    <string name="exam_history_time">Thời gian : %s</string>
    <string name="exam_history_point">Điểm số :  %s/100 </string>
    <string name="exam_history_result">Kết quả : %s</string>
    <string name="cap_index_question">Câu %s :</string>
    <string  formatted="false" name="cap_struct_answer">%s . %s</string>
    <string  formatted="false" name="cap_time_countdown">Thời gian còn lại: %s phút %s giây</string>
    <string  formatted="false" name="cap_reulst">Bạn trả lời đúng %s trên %s câu.</string>
    <string  formatted="false" name="cap_number_answered">Trả lời: %s/%s câu.</string>
    <string name="double_back_to_exit">Ấn thoát 2 lần liên tiếp để thoát</string>
    <string name="cap_title_progress_learn">Tiến trình khóa học:</string>

    <!--about me-->
    <string name="about_description">E-Learning cung cấp tiếp cận phổ cập tới công tác đào tạo tốt nhất trên thế giới, hợp tác với các trường đại học và các tổ chức mức cao nhất để cung cấp các khóa học trực tuyến.</string>
    <string name="about_hotline">Hotline : 1900 1000</string>
    <string name="about_address">Địa chỉ :475A Điện Biên Phủ, phường 25, quận Bình Thạnh, TP.HCM</string>
    <string name="about_email">Email : yduoc360@gmail.com</string>
    <string name="about_cap_version">Phiên bản: %s</string>
</resources>
