<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_5dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">
            <LinearLayout
                android:id="@+id/viewBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp">

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/userName"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp">

                    <EditText
                        android:id="@+id/txtPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/passWord"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    style="@style/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|start"
                    android:layout_margin="@dimen/margin_3dp"
                    android:layout_marginLeft="@dimen/margin_50dp"
                    android:layout_marginRight="@dimen/margin_50dp"
                    android:text="@string/savePass" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:background="@color/color_background_button"
                    android:text="@string/signIn"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_5dp"
                    android:text="@string/forgotPassword"
                    android:textColor="@color/colorBlue700"
                    android:textStyle="italic" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_3dp"
                android:layout_weight="0.4"
                android:gravity="top|center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/colorSecondaryText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="@dimen/text_size_12"
                        android:text="@string/or_login"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorSecondaryText" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/colorSecondaryText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5dp"
                        android:layout_weight="0.5"
                        android:background="@color/colorFBBackground"
                        android:drawableLeft="@drawable/icon_login_fb"
                        android:text="@string/loginFB"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5dp"
                        android:layout_weight="0.5"
                        android:background="@color/colorWhite"
                        android:drawableLeft="@drawable/icon_login_gg"
                        android:drawablePadding="@dimen/margin_3dp"
                        android:text="@string/loginGG"
                        android:textColor="@color/colorGGBackground" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</FrameLayout>