<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0.7"
    android:gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/dialog_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:padding="@dimen/padding_3dp"
            android:gravity="center|left"
            android:layout_margin="@dimen/margin_5dp">
            <TextView
                android:id="@+id/txtFilterPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_18"
                android:text="@string/cap_price"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:padding="@dimen/padding_3dp"
        android:gravity="center|left"
        android:layout_margin="@dimen/margin_5dp">
        <TextView
            android:id="@+id/txtFilterRate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_18"
            android:text="@string/cap_rate"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:padding="@dimen/padding_3dp"
        android:gravity="center|left"
        android:layout_margin="@dimen/margin_5dp">

        <TextView
            android:id="@+id/txtFilterSale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cap_sale"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:padding="@dimen/padding_3dp"
        android:gravity="center|left"
        android:layout_margin="@dimen/margin_5dp">
        <TextView
            android:id="@+id/txtFilterCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_18"
            android:text="@string/cap_category"/>
    </LinearLayout>


</LinearLayout>